# Medit

./: CMakeLists.txt  README.md
src/: eigenv.c  ellipse.c  extern.h  grafic.h  inout.c  items.c  medit.c  mesh.h  parsop.c  picking.c  scene.c  tiles.c  util.c
